--- a/notebooks/DemoFits.ipynb
+++ b/notebooks/DemoFits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,43 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ColDefs(\n",
-       "    name = 'lam'; format = '1D'; unit = 'nm'\n",
-       "    name = 'flux'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'dflux1'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'dflux2'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'trans'; format = '1D'; unit = '1'\n",
-       "    name = 'dtrans1'; format = '1D'; unit = '1'\n",
-       "    name = 'dtrans2'; format = '1D'; unit = '1'\n",
-       "    name = 'flux_sml'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_ssl'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_zl'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_tie'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_tme'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_ael'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'flux_arc'; format = '1D'; unit = 'ph/s/m2/micron/arcsec2'\n",
-       "    name = 'trans_ma'; format = '1D'; unit = '1'\n",
-       "    name = 'trans_o3'; format = '1D'; unit = '1'\n",
-       "    name = 'trans_rs'; format = '1D'; unit = '1'\n",
-       "    name = 'trans_ms'; format = '1D'; unit = '1'\n",
-       ")"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.90604027 0.93088946 0.9441435  ... 0.97195438 0.9766358  0.97280923]\n",
+      "[0.91021237 0.93517595 0.948491   ... 0.97587499 0.98057527 0.97673325]\n",
+      "0.9954163515266411\n",
+      "0.9959825114025724\n",
+      "0.05266441240654368\n",
+      "0.9956406567161233\n",
+      "0.05287798231259181\n",
+      "0.9998962644550085\n"
+     ]
     }
    ],
    "source": [
-    "a = hdul[1]\n",
-    "rec = a.data\n",
-    "rec.columns"
+    "print(rec[\"trans\"])\n",
+    "print(rec[\"trans_ma\"])\n",
+    "print((rec[\"trans\"] / rec[\"trans_ma\"]).min())\n",
+    "print((rec[\"trans\"] / rec[\"trans_ma\"]).max())\n",
+    "print(rec[\"trans\"].min())\n",
+    "print(rec[\"trans\"].max())\n",
+    "print(rec[\"trans_ma\"].min())\n",
+    "print(rec[\"trans_ma\"].max())"
    ]
   }
  ],
