--- a/notebooks/DemoFits.ipynb
+++ b/notebooks/DemoFits.ipynb
@@ -22,25 +22,27 @@
      "output_type": "stream",
      "text": [
       "[0.90604027 0.93088946 0.9441435  ... 0.97195438 0.9766358  0.97280923]\n",
-      "[0.91021237 0.93517595 0.948491   ... 0.97587499 0.98057527 0.97673325]\n",
-      "0.9954163515266411\n",
-      "0.9959825114025724\n",
-      "0.05266441240654368\n",
-      "0.9956406567161233\n",
-      "0.05287798231259181\n",
-      "0.9998962644550085\n"
+      "[0.90604027 0.93088946 0.9441435  ... 0.97195438 0.9766358  0.97280923]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "print(rec[\"trans\"])\n",
-    "print(rec[\"trans_ma\"])\n",
-    "print((rec[\"trans\"] / rec[\"trans_ma\"]).min())\n",
-    "print((rec[\"trans\"] / rec[\"trans_ma\"]).max())\n",
-    "print(rec[\"trans\"].min())\n",
-    "print(rec[\"trans\"].max())\n",
-    "print(rec[\"trans_ma\"].min())\n",
-    "print(rec[\"trans_ma\"].max())"
+    "rect = hdul[1].data\n",
+    "\n",
+    "telGrid = np.load(\"../data/trGrid_crires.npy\")\n",
+    "print(telGrid[1])\n",
+    "print(rect[\"trans\"])"
    ]
   }
  ],
