--- a/notebooks/AstroTesi.ipynb
+++ b/notebooks/AstroTesi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "id": "jZbjMkN1zmbj"
    },
@@ -17,7 +17,7 @@
    "source": [
     "import numpy as np\n",
     "import scipy\n",
-    "from scipy import interpolate, constants, stats\n",
+    "from scipy import interpolate, constants\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
@@ -124,9 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Water vapor plays a significant role in atmospheric absorption, which in turn affects astronomical observations.\n",
+    "As light from the observed planetary system traverses the terrestrial atmosphere to reach the telescope, some of it is absorbed or scattered. This phenomenon needs to be modelled in order to generate synthetic observations.\n",
     "\n",
-    "Precipitable water vapor is the total amount of atmospheric water vapor in a vertical column of air, measured as the height it would have if it were condensed.\n",
+    "*Precipitable water vapor* is the amount of water vapor in a column of air, expressed as its height if it were condensed. In the wavelength range of interest, atmospheric extinction is dominated by molecular absorption, which is affected by PVW values.\n",
     "\n",
     "Below, a synthetic sequence of precipitable water vapor values is generated as a stochastic process. The same technique will be used to generate sequences of other kinds."
    ]
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -287,7 +287,7 @@
     "\tsigma = fwhm / (2 * jnp.sqrt(2 * jnp.log(2)))\n",
     "\thker = 32\n",
     "\txker = jnp.arange(-hker, hker + 1)\n",
-    "\tyker = jnp.exp(-(xker[*([None] * res.ndim)] / sigma[..., None]) ** 2 / 2)\n",
+    "\tyker = jnp.exp(-(xker[None] / sigma[..., None]) ** 2 / 2)\n",
     "\tyker /= yker.sum(axis=-1, keepdims=True)\n",
     "\treturn yker, hker\n",
     "\n",
@@ -371,17 +371,6 @@
     "res_seq = jnp.asarray(gen_res_seq(key, ph_seq.size))\n",
     "planet_sign = create_planet_sign(planet_specs_train[0], spec_wlen, ph_seq, prim_vel, orb_speed, wobble_seq, res_seq)\n",
     "plot_sign(wlen_regr, planet_sign)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As light from the observed planetary system traverses the terrestrial atmosphere to reach the telescope, some of it is absorbed or scattered. This phenomenon needs to be modelled in order to generate synthetic observations.\n",
-    "\n",
-    "Precipitable water vapor is the amount of water vapor in a column of air, expressed as its height if it were condensed. In the wavelength range of interest, atmospheric extinction is dominated by molecular absorption, which is affected by PVW values.\n",
-    "\n",
-    "The code below models a PVW sequence as a Markov process and displays it in a graph."
    ]
   },
   {
@@ -592,6 +581,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below generates a synthetic observation.\n",
+    "\n",
+    "The signal as received on Earth's surface is the product of the signal from the planetary system and the telluric signal. However, the actual observed signal will not be exact. Instead, it will be altered by the functioning of the instrument itself."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
@@ -686,11 +684,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below generates a synthetic observation.\n",
+    "The training of the neural network will require \"positive\" observed signals which contain a planetary component, \"negative\" ones which do not and raw planetary signals to be reconstructed from positive observations.\n",
     "\n",
-    "A pool of planetary and telluric signals is generated. This can be used multiple times, improving efficiency, and can be refreshed when appropriate in order to still have enough randomness.\n",
+    "Below, the generation of a triplet comprising a observed positive signal, the corresponding observed negative signal (what would have been detected had the planet not been there) and the planetary signal is defined.\n",
     "\n",
-    "To synthetize an observation, a planetary and a telluric signal are selected from the available pool and noise is added."
+    "Because generating planetary and telluric signals is computationally expensive, the generation relies on *pools* of pre-generated signals and samples a signal from each at random. To obtain the positive observation, it then multiplies the two signals and applies the effects of the measurement. The negative observation is simply the telluric signal (the star by itself would have a spectral flux of 1 at all times for all wavelengths) affected by measurement effects which are based on the same random values. Signal pools can be used multiple times, improving efficiency, and can be refreshed when appropriate in order to still have enough randomness."
    ]
   },
   {
@@ -859,7 +857,7 @@
     "\tassert planet_sign_pool.shape[1:] == tell_sign_pool.shape[1:]\n",
     "\n",
     "\tkeys = jax.random.split(key, num=num)\n",
-    "\tpos_x, neg_x, pos_y = gen_sign_triples(keys, planet_sign_pool, tell_sign_pool, planet_mult=planet_mult)\n",
+    "\tpos_x, neg_x, pos_y = gen_sign_triples(keys, planet_sign_pool, tell_sign_pool, planet_mult)\n",
     "\tx, y = prepare_batch(pos_x, neg_x, pos_y)\n",
     "\treturn x, y"
    ]
@@ -895,7 +893,7 @@
     "\n",
     "def create_train_state(module, key, learning_rate):\n",
     "\tparams = module.init(key, sign[..., None])[\"params\"]\n",
-    "\ttx = optax.adam(learning_rate)\n",
+    "\ttx = optax.adagrad(learning_rate)\n",
     "\tts = train_state.TrainState.create(apply_fn=module.apply, params=params, tx=tx)\n",
     "\treturn ts"
    ]
@@ -990,16 +988,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Parameters:\n",
-    "- Star temperature\n",
-    "- Orbital speed\n",
-    "- Radius of planet and star"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -1070,11 +1058,38 @@
     "\t\tstate = mngr.restore(epoch - 5, args=ocp.args.StandardRestore(state))\n",
     "\t\tlearning_rate /= 2\n",
     "\t\tprint(\"New learning rate:\", learning_rate)\n",
-    "\t\ttx = optax.adam(learning_rate)\n",
+    "\t\ttx = optax.adagrad(learning_rate)\n",
     "\t\tstate = train_state.TrainState.create(apply_fn=state.apply_fn, params=state.params, tx=tx)\n",
     "\tprev_epoch_loss = epoch_loss\n",
     "\t\n",
     "\tepoch += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key, sign_key = jax.random.split(key)\n",
+    "\n",
+    "pos_x, neg_x, target_pos = gen_sign_triple(sign_key, planet_sign_pool, tell_sign_pool, 1)\n",
+    "\n",
+    "pos_x = z_scores(pos_x)\n",
+    "pos_x = pos_x[..., None]\n",
+    "\n",
+    "neg_x = z_scores(neg_x)\n",
+    "neg_x = neg_x[..., None]\n",
+    "\n",
+    "pos_y = cnn.apply({ \"params\": state.params }, pos_x)\n",
+    "neg_y = cnn.apply({ \"params\": state.params }, neg_x)\n",
+    "\n",
+    "print(pos_y.std())\n",
+    "print(neg_y.std())\n",
+    "\n",
+    "plot_sign(wlen_regr, pos_y[..., 0])\n",
+    "plot_sign(wlen_regr, neg_y[..., 0])\n",
+    "plot_sign(wlen_regr, target_pos)"
    ]
   },
   {
