--- a/notebooks/AstroTesi.ipynb
+++ b/notebooks/AstroTesi.ipynb
@@ -319,7 +319,7 @@
     "\treturn ph\n",
     "\n",
     "def gen_wobble_seq(key, num):\n",
-    "\twobble_seq = gen_process(key, num, 0.9) * 0.0\n",
+    "\twobble_seq = gen_process(key, num, 0.9) * 0.1\n",
     "\treturn wobble_seq\n",
     "\n",
     "def create_planet_sign_callback(spec, wlen, ph_seq, prim_vel_seq, orb_speed, wobble_seq, res_seq):\n",
@@ -893,7 +893,7 @@
     "\n",
     "def create_train_state(module, key, learning_rate):\n",
     "\tparams = module.init(key, sign[..., None])[\"params\"]\n",
-    "\ttx = optax.adagrad(learning_rate)\n",
+    "\ttx = optax.adam(learning_rate)\n",
     "\tts = train_state.TrainState.create(apply_fn=module.apply, params=params, tx=tx)\n",
     "\treturn ts"
    ]
@@ -1037,7 +1037,7 @@
     "\tstart_epoch_time = time.time()\n",
     "\tfor _ in range(100):\n",
     "\t\tkey, batch_key = jax.random.split(key)\n",
-    "\t\tbatch = gen_batch(batch_key, num_spectra, planet_sign_pool, tell_sign_pool, min(100 - epoch, 1))\n",
+    "\t\tbatch = gen_batch(batch_key, num_spectra, planet_sign_pool, tell_sign_pool, max(100 - epoch, 1))\n",
     "\t\tstate, loss = train_step(state, batch)\n",
     "\t\tepoch_loss += loss\n",
     "\tif epoch % 10 == 0:\n",
@@ -1058,7 +1058,7 @@
     "\t\tstate = mngr.restore(epoch - 5, args=ocp.args.StandardRestore(state))\n",
     "\t\tlearning_rate /= 2\n",
     "\t\tprint(\"New learning rate:\", learning_rate)\n",
-    "\t\ttx = optax.adagrad(learning_rate)\n",
+    "\t\ttx = optax.adam(learning_rate)\n",
     "\t\tstate = train_state.TrainState.create(apply_fn=state.apply_fn, params=state.params, tx=tx)\n",
     "\tprev_epoch_loss = epoch_loss\n",
     "\t\n",
